[gd_scene load_steps=4 format=2]

[ext_resource path="res://options/options.gd" type="Script" id=1]
[ext_resource path="res://textures/black.png" type="Texture" id=2]
[ext_resource path="res://themes/main.tres" type="Theme" id=3]

[node name="Options" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="background" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
offset = Vector2( 512, 384 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 768 )
_sections_unfolded = [ "Material" ]

[node name="MainMenu" type="Button" parent="." index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -103.0
margin_top = -176.0
margin_right = 103.0
margin_bottom = -154.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "BTN_MAIN_MENU"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Theme" ]

[node name="Label" type="Label" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -80.0
margin_top = 47.0
margin_right = 79.0
margin_bottom = 63.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 3 )
text = "BTN_OPTIONS"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="GridContainer" type="GridContainer" parent="." index="3"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -122.0
margin_top = 119.0
margin_right = 122.0
margin_bottom = 219.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
columns = 2
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="LanguageLabel" type="Label" parent="GridContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 3.0
margin_right = 164.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "LANGUAGE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LanguageOption" type="OptionButton" parent="GridContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 168.0
margin_right = 244.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="ScreenLabel" type="Label" parent="GridContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 38.0
margin_right = 164.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "FULL_SCREEN"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScreenOption" type="CheckButton" parent="GridContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 168.0
margin_top = 26.0
margin_right = 244.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin" ]

[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]

[connection signal="item_selected" from="GridContainer/LanguageOption" to="." method="_on_LanguageOption_item_selected"]

[connection signal="toggled" from="GridContainer/ScreenOption" to="." method="_on_ScreenOption_toggled"]


